--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,11 @@
     "require": {
         "php": "^8.2",
         "andreia/filament-nord-theme": "2.0",
-        "emmanpbarrameda/filament-take-picture-field": "^1.1",
+        "emmanpbarrameda/filament-take-picture-field": "1.1",
         "filament/filament": "^4.2",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "resma/filament-awin-theme": "^1.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
